--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: any
+  shared_preferences: any
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -45,7 +47,6 @@ dependencies:
   firebase_analytics:
   cloud_firestore:
   firebase_storage: ^10.0.3
-  http: ^0.13.4
   flutter_secure_storage: ^5.0.2
   camera: any
   path: any
